--- a/style.css
+++ b/style.css
@@ -22,7 +22,9 @@ h6,
 p,
 span,
 img,
-figure {
+figure,
+input,
+a {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   margin: 0;
@@ -39,12 +41,14 @@ body {
   margin: 5em 10%;
 }
 .container .form {
+  position: relative;
   border-radius: 16px;
   display: flex;
   flex-direction: column;
   background-color: #fff;
   padding: 2em;
-  height: 100%;
+  margin-right: 2em;
+  height: auto;
   box-shadow: 3px 5px 11px #00000038;
 }
 .container .header {
@@ -60,31 +64,58 @@ body {
   margin: 1em 0 0em;
 }
 .container .selection {
-  display: flex;
-  justify-content: space-between;
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 20px;
 }
+
+.container .selection a {
+  font-style: none;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+  color: #000;
+}
+
 .container .form input {
   width: 100%;
   margin: 1em 0;
 }
+.container .form-area {
+  position: relative;
+  height: 18em;
+  margin: 2em 0;
+}
+
 .container .cadastro div:nth-child(4) {
   display: flex;
 }
-.container .cadastro select {
-  position: relative;
-  background-color: transparent;
-  height: 31px;
-  margin: 16px 16px 0 0;
-  appearance: none;
+.container .cadastro .selected {
+  width: 40%;
+  height: 33px;
+  overflow: hidden;
+  overflow: -moz-hidden-unscrollable;
+  background: url(imgs/arrow.png) no-repeat right white;
   border: 1px solid #02020233;
   border-radius: 4px;
+  display: inline-block;
+  position: relative;
+  appearance: none;
+  -moz-appearance: none;
+  top: 16px;
+  margin-right: 22px;
 }
-.container .cadastro select option::after {
-  content: "";
-  width: 0.8em;
-  height: 0.5em;
-  background-color: red;
-  clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+.container .cadastro .selected select {
+  background: transparent;
+  -webkit-appearance: none;
+  width: 100px;
+  font-size: 18px;
+  border: 0;
+  height: 31px;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
 .container .cadastro button {
@@ -92,17 +123,15 @@ body {
   margin: 0 auto;
   background: #47c9af;
   color: white;
-  width: 40%;
-  height: 40px;
+  width: 50%;
+  height: 54px;
   text-align: center;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 700;
   border: none;
   border-radius: 12px;
 }
 
-.container .login {
-}
 .container .login button {
   display: block;
   margin: 0 auto;
@@ -117,7 +146,8 @@ body {
   border-radius: 12px;
 }
 .container .footer {
-  margin-top: 12em;
+  position: absolute;
+  bottom: 20px;
 }
 .container .footer span {
   font-size: 14px;
@@ -136,17 +166,58 @@ body {
   display: none;
 }
 /*Events*/
+.container .selection a[href="#cadastro"],
+.container .selection a[href="#login"]  {
+  opacity: .3;
+  right: 0;
+  position: absolute;
+  transition: all 0.5s linear;
+}
+.container .selection a[href="#cadastro"]::before,
+.container .selection a[href="#login"]::before{
+  content: "";
+  position: absolute;
+  border-radius: 4px;
+  left: 0;
+  bottom: -4px;
+  background-color: #47c9af;;
+  width: 0%;
+  height: 5px;
+  transition: all 1s linear;
+}
+
 #cadastro,
 #login {
-  display: block;
-  visibility: visible;
-  opacity: 1;
-  transition: all 0.5s all;
-}
-#login.ativo,
-#cadastro.ativo {
-  display: none;
-  visibility: hidden;
+  position: absolute;
   opacity: 0;
-  transition: all 0.5s all;
+  width: 100%;
+  top: 270px;
+  bottom: 0;
+  z-index: 0;
+}
+.ativo {
+  top: -35px !important;
+  bottom: 20px !important;
+  opacity: 1 !important;
+  transition: all 0.5s linear;
+}
+.ativoLink{
+  position: relative;
+  opacity: 1!important;
+  z-index: 999;
+}
+.ativoLink::before{
+  width: 100%!important;
+  transition: all .5s linear;
+}
+.container .selection a[href="#login"].ativoLink {
+  right: 80% !important;
+  text-align: left !important;
+ 
+}
+
+.container .selection a[href="#cadastro"].ativoLink {
+  right: 80% !important;
+  text-align: left !important;
+ 
 }
